# pattex

./: CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  testing.py
pattex/: __init__.py
pattex/_utils/: _utils.py
pattex/constants/: extractor_constants.py  regexes.py
pattex/extractors/: __init__.py  email_extraction.py  email_extractor.py  internet.py  ip_extractor.py  url_extractor.py
stubs/constants/: regexes.pyi
test/test_extractors/: test_email_extractor.py  test_internet.py  test_url_extractor.py
