[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "pattex"
version = "0.2.1"
readme = "README.md"
dependencies = [
    "pytest==9.0.3",
]
authors = [
  { name="Shahmeer Khan", email="shahmirkhan519@gmail.com" },
]
description = "Regex pattern matching and extraction library for Python."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/meer-khan/pattex"
Issues = "https://github.com/meer-khan/pattex/issues"

[dependency-groups]
dev = [
    "build>=1.4.3",
    "icecream==2.2.0",
    "twine>=6.2.0",
]
